hphp/test/slow/php7_backported/scalar-types/scalar_strict_declaration_placement_008.php.expectf

Fatal error: strict_types declaration must not use block mode in %s/scalar_strict_declaration_placement_008.php on line 2
